# python-scaffold

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: bootstrap.md  check.md  test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  getting-started.md  index.md
scripts/: bootstrap.py
src/myproject/: __init__.py  config.py  main.py
tests/: conftest.py  test_bootstrap.py  test_main.py
